--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-    "presets": ["@babel/env", "@babel/typescript"]
+    "presets": ["@babel/preset-env", "@babel/typescript"],
+    "plugins": ["@babel/plugin-proposal-class-properties"]
 }
