--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "",
     "main": "./lib/index.js",
+    "files": [
+        "./lib/index.js"
+    ],
     "scripts": {
         "test": "npm run build && mocha .\\lib\\tests\\tests.js -u tdd ",
         "build": "babel src --out-dir lib --extensions \".ts\" --source-maps inline"
