--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "./lib/index.js"
     ],
     "scripts": {
-        "test": "npm run build && mocha .\\lib\\tests\\tests.js -u tdd ",
+        "test": "mocha .\\lib\\tests\\tests.js -u tdd ",
         "build": "babel src --out-dir lib --extensions \".ts\" --source-maps inline"
     },
     "keywords": [],
