--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "./lib/index.js"
     ],
     "scripts": {
+        "prepublish": "npm run build",
         "test": "mocha .\\lib\\tests\\tests.js -u tdd ",
         "build": "babel src --out-dir lib --extensions \".ts\" --source-maps inline"
     },
