--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ts-to-cs",
+    "name": "ts-csharp",
     "version": "0.0.1",
     "description": "Convert typescript code to csharp code.",
     "main": "lib/index.js",
