--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@babel/core": "^7.6.0",
         "@babel/preset-env": "^7.6.0",
         "@babel/preset-typescript": "^7.6.0",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@types/mocha": "^5.2.7",
         "@types/node": "^12.7.5",
         "assert": "^2.0.0",
