--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,11 @@
             "label": "build + test",
             "type": "shell",
             "command": "npm run build; npm run test"
+        },
+        {
+            "label": "npm: publish",
+            "type": "shell",
+            "command": "npm publish"
         }
     ]
 }
