--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "keywords": [],
     "author": "box-of-hats",
     "license": "ISC",
-    "dependencies": {},
+    "dependencies": {
+        "@types/assert": "^1.5.1"
+    },
     "repository": {
         "url": "https://github.com/Box-Of-Hats/ts-csharp"
     },
