fix bug where numbers in properties would block class generation

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,10 @@
         {
             "label": "build + test",
             "type": "shell",
-            "command": "npm run build; npm run test"
+            "command": "npm run build; npm run test",
+            "problemMatcher": [
+                "$tsc"
+            ]
         },
         {
             "label": "npm: publish",
